Revert "Merge branch '1.18.x' of https://github.com/albertosaurio65/Alchemistry into 1.18.x"
This reverts commit 011051114fbbd378bf0bbca24edc38c64dbc1fd6, reversing
changes made to 8acd2e9b0d1276dd798d058649e085f5d7a78d9e.